[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/skinPopup.gd" type="Script" id=1]

[node name="skinPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -180.0
margin_bottom = -1020.0
script = ExtResource( 1 )

[node name="vBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="vBox"]
margin_right = 892.0
margin_bottom = 14.0
text = "Skins:"
align = 1
valign = 1

[node name="gridCtn" type="GridContainer" parent="vBox"]
margin_top = 18.0
margin_right = 892.0
margin_bottom = 18.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4
[connection signal="about_to_show" from="." to="." method="_on_skinPopup_about_to_show"]
